<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.msht.mshtLpg.mshtLpgMaster.activity.SendCustomerOrderActivity">
    <com.msht.mshtLpg.mshtLpgMaster.customView.TopBarView
        android:id="@+id/scan_delive_topbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/top_bar_height_normol"
        android:background="@color/msb_color"
        android:padding="@dimen/margin_Modules"
        app:title_text="提交订单" />
    <ScrollView
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/background_gray">
            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:background="@color/msb_color"/>
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/background_gray">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="70dp"
                        android:background="@color/msb_color"/>
                </LinearLayout>
                <include layout="@layout/layout_lpg_select_address_time" />
            </FrameLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="15dp"/>

            <include layout="@layout/layout_lpg_gas_bottle_type" />
            <include layout="@layout/layout_line_interval"/>
            <RelativeLayout
                android:id="@+id/rlt_delivery"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="45dp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                android:background="@color/white">
                <TextView
                    android:id="@+id/id_transportation_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:textColor="@color/textcolor"
                    android:textSize="16sp"
                    android:text="@string/transportation_expense"/>
                <ImageView
                    android:id="@+id/id_transportation_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/id_transportation_text"
                    android:layout_toEndOf="@+id/id_transportation_text"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:contentDescription="@string/picture_text"
                    android:src="@drawable/attention_icon_xh"/>
                <TextView
                    android:id="@+id/id_transportation_expense"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_toRightOf="@+id/id_transportation_img"
                    android:layout_toEndOf="@+id/id_transportation_img"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginEnd="10dp"
                    android:gravity="end"
                    android:textSize="16sp"
                    android:textColor="@color/msb_color"
                    android:text="@string/default_value0"/>

            </RelativeLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="20dp"/>
        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal">
        <RelativeLayout
            android:layout_weight="0.6"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:minHeight="45dp"
            android:background="@color/white">
            <TextView
                android:id="@+id/id_total_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginRight="20dp"
                android:layout_marginEnd="20dp"
                android:textColor="@color/msb_color"
                android:textSize="16sp"
                android:text="@string/default_value0"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/id_total_amount"
                android:layout_toStartOf="@+id/id_total_amount"
                android:layout_centerVertical="true"
                android:layout_marginRight="5dp"
                android:layout_marginEnd="5dp"
                android:textSize="16sp"
                android:textColor="@color/textcolor"
                android:text="@string/total_text"/>
        </RelativeLayout>
        <Button
            android:id="@+id/id_btn_send"
            android:layout_weight="0.4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/msb_color"
            android:minHeight="45dp"
            android:gravity="center"
            android:text="@string/send_server"
            android:textColor="@color/white"
            android:textSize="16sp"/>
    </LinearLayout>
</LinearLayout>
